* BUGFIX: Fixed tabs not rendering correctly when switching to tab view (while double-clicking).
* BUGFIX: Opening the Info dialog would mark some file as requiring an update even when nothing was changed.
* BUGFIX: Fixed scripts Hook ComicInfoUI & QuickOpenUI, not working.

^^^^^^^^^^ Community Edition ^^^^^^^^^^

Build 0.9.178:

* NEW: ComicRack now fully supports HiDPI Screens (Surface Pro, Retina etc.)
* NEW: Added new format values {numberonly} and {volumeonly} for caption/filename formatting (see example in comicrack.ini CaptionFormat)

* CHANGE: Removed usage of default ComicRack.ini if alternate configuration is specified

Build 0.9.177:

* CHANGE: Upped .NET version to 4.5
* CHANGE: Added background saving of cache index. Should help with lost cache items when ComicRack crashes
* CHANGE: Extended search depth to find connected USB devices
* CHANGE: Added column header to group list
* CHANGE: Added group size to group list
* CHANGE: Double click on group header list splitter closes the list

* BUGFIX: Fixed some spelling errors
* BUGFIX: Multiple Comics Dialog showed custom fields in tab mode even if turned off
* BUGFIX: Fixed spinner positions when switching between panel/tab style in dialogs
* BUGFIX: Fixed mousewheel scrolling in browser in some cases
* BUGFIX: Fixed possible failure to create first thumbnails immediately after startup of application  

Build 0.9.176:

* NEW: Optional side panel in comic browser to show all group headers
* NEW: Option in preferences to force all stacks in a list to the same layout

* BUGFIX: Fixed possible failed installation of plugins during restart
* BUGFIX: Fixed setting invalid temp path in comicrack.ini
* BUGFIX: Fixed display of custom values in multi comic dialog

Build 0.9.175:

* NEW: Added WifiSyncReceiveTimeout, WifiSyncSendTimeout, WifiSyncConnectionTimeout, WifiSyncConnectionRetries values to ComicRack.ini

* BUGFIX: Fixed Ctrl-I shortcut in Browser
* BUGFIX: Fixed missing Undo entries for Quick Rating